--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,8 +1,8 @@
 .ext-window {width: 800px;}
 .black {background: black; color: white;}
 .yellow {color: yellow;}
-#turtle {position: absolute; top; 0; left: 0; width: 20px; height: 20px;}
-.canvas {position: relative; top; 0; left: 0;}
+#turtle {position: absolute; top: 0; left: 0; width: 20px; height: 20px;}
+.canvas {position: relative; top: 0; left: 0;}
 textarea {resize: none;}
 pre {width: 99%;}
 img.banner {height:70px;}
